<!--
  ~ Created by Eric Hongming Lin on 28/05/18 3:01 AM
  ~ Copyright (c) 2018. All right reserved
  ~
  ~ Last modified 20/05/18 3:05 AM
  -->

<resources>
    <string name="app_name">My Reward</string>

    <!-- Activity Titles -->
    <string name="title_new_task">New Task</string>
    <string name="title_edit_task">Edit Task</string>
    <string name="title_all_tasks">All Tasks</string>
    <string name="title_task_details">Task Details</string>
    <string name="title_dialog">Dialog</string>

    <!-- Common Strings -->
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="go_back">Return</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Tasks Tree Node Overflow Menu -->
    <string name="menu_tree_node_overflow_view_details">View Details</string>
    <string name="menu_tree_node_overflow_add_child">Add Child</string>
    <string name="menu_tree_node_overflow_delete">Delete</string>
    <string name="menu_tree_node_overflow_archive">Archive</string>

    <!-- Alert Dialog -->
    <string name="alert_dialog_archive_task_title">Archive Task</string>
    <string name="alert_dialog_archive_task_message">Are you sure you want to archive the task and its children?</string>
    <string name="alert_dialog_archive_task_complete_message">The task and its children is archived.</string>
    <string name="alert_dialog_delete_task_title">Delete Task</string>
    <string name="alert_dialog_delete_task_message">Are you sure you want to delete the task and its children?</string>
    <string name="alert_dialog_delete_task_complete_message">The task and its children is deleted.</string>

    <!-- Task Attributes -->
    <string name="task_parent">Parent</string>
    <string name="task_parent_name">Root</string>
    <string name="task_name">Name</string>
    <string name="task_reward">Reward</string>
    <string name="task_punishment">Punishment</string>
    <string name="task_start_at">Start at</string>
    <string name="task_due_at">Due at</string>
    <string name="task_repeatable">Repeatable</string>
    <string name="task_period">Period</string>
    <string name="task_description">Description</string>

    <!-- EditText Hint -->
    <string name="task_required_hint">Required</string>
    <string name="task_optional_hint">Optional</string>

    <!-- Repeat Period Spinner Entries -->
    <string-array name="task_period_entries">
        <item>@string/task_period_every_day</item>
        <item>@string/task_period_every_week</item>
        <item>@string/task_period_every_month</item>
        <item>@string/task_period_every_year</item>
        <item>@string/task_period_custom_days</item>
    </string-array>

    <string name="task_period_every_day">Every Day</string>
    <string name="task_period_every_week">Every Week</string>
    <string name="task_period_every_month">Every Month</string>
    <string name="task_period_every_year">Every Year</string>
    <string name="task_period_custom_days">Custom Days</string>
    <string name="task_period_days_suffix">&#160;Day(s)</string>

    <!-- Validation Messages -->
    <string name="task_complete_message">The task is complete.</string>
    <string name="task_date_validation_message">The date should be null or after today.</string>
    <string name="task_start_and_due_date_validation_message">The start date should be before the due date.</string>
    <string name="task_validate_form_message">Some fields are invalid.</string>
    <string name="task_add_task_successfully_message">Congratulate, you have successfully added a task.</string>

</resources>
