<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".dialog.DialogActivity">

    <com.github.johnkil.print.PrintView
        android:id="@+id/ic_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        app:iconFont="fonts/material-icon-font.ttf"
        app:iconSize="50dp" />

    <TextView
        android:id="@+id/text_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alert_dialog_archive_task_message" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <com.andexert.library.RippleView
            android:id="@+id/cancel_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:rv_rippleDuration="100"
            app:rv_zoom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/color_button_cancelled"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/cancel"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </com.andexert.library.RippleView>

        <com.andexert.library.RippleView
            android:id="@+id/confirm_action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:rv_rippleDuration="100"
            app:rv_zoom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/color_button_confirm"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/confirm"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </com.andexert.library.RippleView>
    </LinearLayout>

</LinearLayout>